--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,6 +3,88 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "796e5faf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load Excel file\n",
+    "file_path = \"your_excel_file.xlsx\"\n",
+    "xl = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Load necessary sheets\n",
+    "df_conso = xl.parse(\"Conso Data\")\n",
+    "df_girs = xl.parse(\"GIRS\")\n",
+    "df_tier = xl.parse(\"Tier_Data\")\n",
+    "df_ttrl = xl.parse(\"TTRL_Data\")\n",
+    "df_pdmr = xl.parse(\"PDMR_Data\", header=None, names=[\"Resource Name\"])\n",
+    "\n",
+    "# Remove extra spaces & standardize case\n",
+    "def clean_dataframe(df):\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "    return df.applymap(lambda x: x.strip().lower() if isinstance(x, str) else x)\n",
+    "\n",
+    "df_conso = clean_dataframe(df_conso)\n",
+    "df_girs = clean_dataframe(df_girs)\n",
+    "df_tier = clean_dataframe(df_tier)\n",
+    "df_ttrl = clean_dataframe(df_ttrl)\n",
+    "df_pdmr = clean_dataframe(df_pdmr)\n",
+    "\n",
+    "# Process unique PSIDs with Resource Name and Email\n",
+    "def process_psid_group(group):\n",
+    "    resource_names = group[\"Resource Name\"].dropna().unique()\n",
+    "    email_ids = group[\"Email\"].dropna().unique()\n",
+    "    \n",
+    "    # Pick the name with the most words if multiple exist\n",
+    "    if len(resource_names) > 1:\n",
+    "        resource_name = max(resource_names, key=lambda x: len(x.split()))\n",
+    "    else:\n",
+    "        resource_name = resource_names[0] if resource_names else \"\"\n",
+    "    \n",
+    "    # Join multiple email IDs if discrepancies exist\n",
+    "    email = \"; \".join(email_ids) if len(email_ids) > 1 else (email_ids[0] if email_ids else \"\")\n",
+    "    \n",
+    "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email})\n",
+    "\n",
+    "unique_psids = df_conso.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
+    "\n",
+    "# Merge GIRS Current Status\n",
+    "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
+    "unique_psids.rename(columns={\"Role\": \"GIRS Current Status\"}, inplace=True)\n",
+    "\n",
+    "# Merge Tier1 & TTRL status\n",
+    "unique_psids[\"Tier1\"] = unique_psids[\"PSID\"].isin(df_tier[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "unique_psids[\"TTRL\"] = unique_psids[\"PSID\"].isin(df_ttrl[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Merge PDMR status\n",
+    "unique_psids[\"PDMR\"] = unique_psids[\"Resource Name\"].isin(df_pdmr[\"Resource Name\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Extract unique team names from Conso Data Tab Data column\n",
+    "df_conso[\"Tab Data\"] = df_conso[\"Tab Data\"].astype(str)  # Convert to string to avoid errors\n",
+    "unique_teams = df_conso[\"Tab Data\"].str.split(\",\").explode().str.strip().unique()\n",
+    "\n",
+    "# Initialize team columns with N/A\n",
+    "for team in unique_teams:\n",
+    "    unique_psids[team] = \"N/A\"\n",
+    "\n",
+    "# Update team status based on Conso Data\n",
+    "for _, row in df_conso.iterrows():\n",
+    "    psid = row[\"PSID\"]\n",
+    "    status = row[\"Status\"]\n",
+    "    teams = str(row[\"Tab Data\"]).split(\",\")  # Convert to string before splitting\n",
+    "    for team in teams:\n",
+    "        team = team.strip()\n",
+    "        unique_psids.loc[unique_psids[\"PSID\"] == psid, team] = status\n",
+    "\n",
+    "# Save the final processed data\n",
+    "with pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace', engine='openpyxl') as writer:\n",
+    "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "37bd6bb6",
    "metadata": {},
    "outputs": [],
