--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "796e5faf",
+   "id": "5bea1fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,13 @@
     "\n",
     "# Process unique PSIDs with Resource Name and Email\n",
     "def process_psid_group(group):\n",
-    "    resource_names = group[\"Resource Name\"].dropna().unique()\n",
-    "    email_ids = group[\"Email\"].dropna().unique()\n",
+    "    resource_names = [name.strip() for name in group[\"Resource Name\"].dropna().unique()]\n",
+    "    email_ids = [email.strip() for email in group[\"Email\"].dropna().unique()]\n",
+    "    psid = group[\"PSID\"].iloc[0]\n",
     "    \n",
-    "    # Pick the name with the most words if multiple exist\n",
-    "    if len(resource_names) > 1:\n",
-    "        resource_name = max(resource_names, key=lambda x: len(x.split()))\n",
-    "    else:\n",
-    "        resource_name = resource_names[0] if resource_names else \"\"\n",
+    "    # Remove resource names containing PSID unless it's the only one\n",
+    "    valid_names = [name for name in resource_names if str(psid) not in name]\n",
+    "    resource_name = max(valid_names, key=lambda x: len(x.split()), default=resource_names[0] if resource_names else \"\")\n",
     "    \n",
     "    # Join multiple email IDs if discrepancies exist\n",
     "    email = \"; \".join(email_ids) if len(email_ids) > 1 else (email_ids[0] if email_ids else \"\")\n",
@@ -48,6 +47,9 @@
     "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email})\n",
     "\n",
     "unique_psids = df_conso.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
+    "\n",
+    "# Capture invalid email records\n",
+    "invalid_emails = unique_psids[unique_psids[\"Email\"].isna() | (unique_psids[\"Email\"] == \"\")]\n",
     "\n",
     "# Merge GIRS Current Status\n",
     "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
@@ -79,7 +81,8 @@
     "\n",
     "# Save the final processed data\n",
     "with pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace', engine='openpyxl') as writer:\n",
-    "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n"
+    "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
+    "    invalid_emails.to_excel(writer, sheet_name=\"Invalid Emails\", index=False)\n"
    ]
   },
   {
