--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bea1fa8",
+   "id": "29443527",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Load Excel file\n",
-    "file_path = \"your_excel_file.xlsx\"\n",
+    "file_path = \"GIRS2.xlsx\"\n",
     "xl = pd.ExcelFile(file_path)\n",
     "\n",
     "# Load necessary sheets\n",
@@ -41,15 +41,16 @@
     "    valid_names = [name for name in resource_names if str(psid) not in name]\n",
     "    resource_name = max(valid_names, key=lambda x: len(x.split()), default=resource_names[0] if resource_names else \"\")\n",
     "    \n",
-    "    # Join multiple email IDs if discrepancies exist\n",
-    "    email = \"; \".join(email_ids) if len(email_ids) > 1 else (email_ids[0] if email_ids else \"\")\n",
+    "    # Validate email addresses\n",
+    "    valid_emails = [email for email in email_ids if \"@\" in email and not any(sym in email for sym in [\"/\", \"#\"])]\n",
+    "    email = \"; \".join(valid_emails) if len(valid_emails) > 1 else (valid_emails[0] if valid_emails else \"\")\n",
     "    \n",
     "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email})\n",
     "\n",
     "unique_psids = df_conso.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
     "\n",
     "# Capture invalid email records\n",
-    "invalid_emails = unique_psids[unique_psids[\"Email\"].isna() | (unique_psids[\"Email\"] == \"\")]\n",
+    "invalid_emails = df_conso[df_conso[\"PSID\"].isin(unique_psids[unique_psids[\"Email\"] == \"\"][\"PSID\")]\n",
     "\n",
     "# Merge GIRS Current Status\n",
     "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
@@ -62,9 +63,9 @@
     "# Merge PDMR status\n",
     "unique_psids[\"PDMR\"] = unique_psids[\"Resource Name\"].isin(df_pdmr[\"Resource Name\"]).map({True: \"Yes\", False: \"No\"})\n",
     "\n",
-    "# Extract unique team names from Conso Data Tab Data column\n",
-    "df_conso[\"Tab Data\"] = df_conso[\"Tab Data\"].astype(str)  # Convert to string to avoid errors\n",
-    "unique_teams = df_conso[\"Tab Data\"].str.split(\",\").explode().str.strip().unique()\n",
+    "# Extract unique team names from Conso Data Tab data column\n",
+    "df_conso[\"Tab data\"] = df_conso[\"Tab data\"].astype(str)  # Convert to string to avoid errors\n",
+    "unique_teams = df_conso[\"Tab data\"].str.split(\",\").explode().str.strip().unique()\n",
     "\n",
     "# Initialize team columns with N/A\n",
     "for team in unique_teams:\n",
@@ -74,7 +75,7 @@
     "for _, row in df_conso.iterrows():\n",
     "    psid = row[\"PSID\"]\n",
     "    status = row[\"Status\"]\n",
-    "    teams = str(row[\"Tab Data\"]).split(\",\")  # Convert to string before splitting\n",
+    "    teams = str(row[\"Tab data\"]).split(\",\")  # Convert to string before splitting\n",
     "    for team in teams:\n",
     "        team = team.strip()\n",
     "        unique_psids.loc[unique_psids[\"PSID\"] == psid, team] = status\n",
