--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29443527",
+   "id": "6a7c235f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
     "    \n",
     "    # Validate email addresses\n",
     "    valid_emails = [email for email in email_ids if \"@\" in email and not any(sym in email for sym in [\"/\", \"#\"])]\n",
-    "    email = \"; \".join(valid_emails) if len(valid_emails) > 1 else (valid_emails[0] if valid_emails else \"\")\n",
+    "    email = \"; \".join(valid_emails) if valid_emails else (email_ids[0] if email_ids else \"\")\n",
     "    \n",
     "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email})\n",
     "\n",
     "unique_psids = df_conso.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
     "\n",
     "# Capture invalid email records\n",
-    "invalid_emails = df_conso[df_conso[\"PSID\"].isin(unique_psids[unique_psids[\"Email\"] == \"\"][\"PSID\")]\n",
+    "invalid_emails = df_conso[df_conso[\"PSID\"].isin(unique_psids[unique_psids[\"Email\"].eq(\"\")][\"PSID\"])]\n",
     "\n",
     "# Merge GIRS Current Status\n",
     "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
