--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a7c235f",
+   "id": "1a4002a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,10 +80,14 @@
     "        team = team.strip()\n",
     "        unique_psids.loc[unique_psids[\"PSID\"] == psid, team] = status\n",
     "\n",
+    "# Handle records with missing or non-numeric PSIDs\n",
+    "invalid_psid_records = df_conso[df_conso[\"PSID\"].isna() | ~df_conso[\"PSID\"].astype(str).str.isnumeric()]\n",
+    "\n",
     "# Save the final processed data\n",
     "with pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace', engine='openpyxl') as writer:\n",
     "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
-    "    invalid_emails.to_excel(writer, sheet_name=\"Invalid Emails\", index=False)\n"
+    "    invalid_emails.to_excel(writer, sheet_name=\"Invalid Emails\", index=False)\n",
+    "    invalid_psid_records.to_excel(writer, sheet_name=\"Invalid PSIDs\", index=False)\n"
    ]
   },
   {
