--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,103 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b112f4d6",
+   "id": "20dbccc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load Excel file\n",
+    "file_path = \"GIRS2.xlsx\"\n",
+    "xl = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Load necessary sheets\n",
+    "df_conso = xl.parse(\"Conso Data\")\n",
+    "df_girs = xl.parse(\"GIRS\")\n",
+    "df_tier = xl.parse(\"Tier_Data\")\n",
+    "df_ttrl = xl.parse(\"TTRL_Data\")\n",
+    "df_pdmr = xl.parse(\"PDMR_Data\", header=None, names=[\"Resource Name\"])\n",
+    "\n",
+    "# Remove extra spaces & standardize case\n",
+    "def clean_dataframe(df):\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "    return df.applymap(lambda x: x.strip().lower() if isinstance(x, str) else x)\n",
+    "\n",
+    "df_conso = clean_dataframe(df_conso)\n",
+    "df_girs = clean_dataframe(df_girs)\n",
+    "df_tier = clean_dataframe(df_tier)\n",
+    "df_ttrl = clean_dataframe(df_ttrl)\n",
+    "df_pdmr = clean_dataframe(df_pdmr)\n",
+    "\n",
+    "# Process unique PSIDs with Resource Name and Email\n",
+    "def process_psid_group(group):\n",
+    "    resource_names = [name.strip() for name in group[\"Resource Name\"].dropna().unique()]\n",
+    "    email_ids = [email.strip().strip('<>') for email in group[\"Email\"].dropna().unique()]\n",
+    "    psid = group[\"PSID\"].iloc[0]\n",
+    "    \n",
+    "    # Remove resource names containing PSID unless it's the only one\n",
+    "    valid_names = [name for name in resource_names if str(psid) not in name]\n",
+    "    resource_name = max(valid_names, key=lambda x: len(x.split()), default=resource_names[0] if resource_names else \"\")\n",
+    "    \n",
+    "    # Validate email addresses\n",
+    "    valid_emails = [email for email in email_ids if \"@\" in email and not any(sym in email for sym in [\"/\", \"#\"])]\n",
+    "    email = \"; \".join(valid_emails) if valid_emails else (email_ids[0] if email_ids else \"\")\n",
+    "    \n",
+    "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email, \"All Emails\": \"; \".join(email_ids)})\n",
+    "\n",
+    "unique_psids = df_conso.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
+    "\n",
+    "# Capture invalid email records\n",
+    "invalid_emails = df_conso[df_conso[\"PSID\"].isin(unique_psids[unique_psids[\"Email\"].eq(\"\")][\"PSID\")]\n",
+    "\n",
+    "# Capture multiple email discrepancies\n",
+    "multiple_emails = unique_psids[unique_psids[\"All Emails\"].str.contains(\";\")]\n",
+    "\n",
+    "# Merge GIRS Current Status\n",
+    "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
+    "unique_psids.rename(columns={\"Role\": \"GIRS Current Status\"}, inplace=True)\n",
+    "\n",
+    "# Merge Tier1 & TTRL status\n",
+    "unique_psids[\"Tier1\"] = unique_psids[\"PSID\"].isin(df_tier[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "unique_psids[\"TTRL\"] = unique_psids[\"PSID\"].isin(df_ttrl[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Merge PDMR status\n",
+    "unique_psids[\"PDMR\"] = unique_psids[\"Resource Name\"].isin(df_pdmr[\"Resource Name\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Extract unique team names from Conso Data Tab data column\n",
+    "df_conso[\"Tab data\"] = df_conso[\"Tab data\"].astype(str)  # Convert to string to avoid errors\n",
+    "unique_teams = df_conso[\"Tab data\"].str.split(\",\").explode().str.strip().unique()\n",
+    "\n",
+    "# Initialize team columns with N/A\n",
+    "for team in unique_teams:\n",
+    "    unique_psids[team] = \"N/A\"\n",
+    "\n",
+    "# Update team status based on Conso Data\n",
+    "for _, row in df_conso.iterrows():\n",
+    "    psid = row[\"PSID\"]\n",
+    "    status = row[\"Status\"]\n",
+    "    teams = str(row[\"Tab data\"]).split(\",\")  # Convert to string before splitting\n",
+    "    for team in teams:\n",
+    "        team = team.strip()\n",
+    "        unique_psids.loc[unique_psids[\"PSID\"] == psid, team] = status\n",
+    "\n",
+    "# Handle records with missing or non-numeric PSIDs\n",
+    "invalid_psid_records = df_conso[df_conso[\"PSID\"].isna() | ~df_conso[\"PSID\"].astype(str).str.isnumeric()]\n",
+    "\n",
+    "# Save the final processed data\n",
+    "with pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace', engine='openpyxl') as writer:\n",
+    "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
+    "    invalid_emails.to_excel(writer, sheet_name=\"Invalid Emails\", index=False)\n",
+    "    invalid_psid_records.to_excel(writer, sheet_name=\"Invalid PSIDs\", index=False)\n",
+    "    multiple_emails.to_excel(writer, sheet_name=\"Multiple Emails\", index=False)\n",
+    "    df_conso.to_excel(writer, sheet_name=\"Original Data\", index=False)\n",
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c14e943f",
    "metadata": {},
    "outputs": [],
    "source": [
