--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20dbccc5",
+   "id": "d86f1108",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "# Load Excel file\n",
     "file_path = \"GIRS2.xlsx\"\n",
@@ -31,10 +32,15 @@
     "df_ttrl = clean_dataframe(df_ttrl)\n",
     "df_pdmr = clean_dataframe(df_pdmr)\n",
     "\n",
+    "# Extract email from < > if present\n",
+    "def extract_email(email):\n",
+    "    match = re.search(r\"<(.*?)>\", email)\n",
+    "    return match.group(1) if match else email\n",
+    "\n",
     "# Process unique PSIDs with Resource Name and Email\n",
     "def process_psid_group(group):\n",
     "    resource_names = [name.strip() for name in group[\"Resource Name\"].dropna().unique()]\n",
-    "    email_ids = [email.strip().strip('<>') for email in group[\"Email\"].dropna().unique()]\n",
+    "    email_ids = [extract_email(email.strip()) for email in group[\"Email\"].dropna().unique()]\n",
     "    psid = group[\"PSID\"].iloc[0]\n",
     "    \n",
     "    # Remove resource names containing PSID unless it's the only one\n",
@@ -43,17 +49,26 @@
     "    \n",
     "    # Validate email addresses\n",
     "    valid_emails = [email for email in email_ids if \"@\" in email and not any(sym in email for sym in [\"/\", \"#\"])]\n",
-    "    email = \"; \".join(valid_emails) if valid_emails else (email_ids[0] if email_ids else \"\")\n",
+    "    email = \"; \".join(valid_emails) if valid_emails else \"\"\n",
     "    \n",
-    "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email, \"All Emails\": \"; \".join(email_ids)})\n",
+    "    selected_email = valid_emails[0] if len(set(valid_emails)) == 1 else \"\"\n",
+    "    \n",
+    "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email, \"All Emails\": \"; \".join(email_ids), \"Selected Email\": selected_email})\n",
     "\n",
-    "unique_psids = df_conso.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
+    "# Filter valid PSIDs (numeric only)\n",
+    "df_conso[\"PSID\"] = df_conso[\"PSID\"].astype(str)\n",
+    "df_valid_psid = df_conso[df_conso[\"PSID\"].str.isnumeric()].copy()\n",
+    "df_invalid_psid = df_conso[~df_conso[\"PSID\"].str.isnumeric()].copy()\n",
+    "df_invalid_psid.insert(0, \"PSID\", \"Invalid\")  # Ensure PSID column exists\n",
+    "\n",
+    "unique_psids = df_valid_psid.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
     "\n",
     "# Capture invalid email records\n",
-    "invalid_emails = df_conso[df_conso[\"PSID\"].isin(unique_psids[unique_psids[\"Email\"].eq(\"\")][\"PSID\")]\n",
+    "invalid_emails = df_valid_psid[df_valid_psid[\"PSID\"].isin(unique_psids.loc[unique_psids[\"Email\"].eq(\"\"), \"PSID\"])].copy()\n",
     "\n",
     "# Capture multiple email discrepancies\n",
-    "multiple_emails = unique_psids[unique_psids[\"All Emails\"].str.contains(\";\")]\n",
+    "multiple_emails = unique_psids[unique_psids[\"All Emails\"].str.contains(\";\")].copy()\n",
+    "multiple_emails[\"Selected Email\"] = multiple_emails[\"Selected Email\"]\n",
     "\n",
     "# Merge GIRS Current Status\n",
     "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
@@ -67,7 +82,7 @@
     "unique_psids[\"PDMR\"] = unique_psids[\"Resource Name\"].isin(df_pdmr[\"Resource Name\"]).map({True: \"Yes\", False: \"No\"})\n",
     "\n",
     "# Extract unique team names from Conso Data Tab data column\n",
-    "df_conso[\"Tab data\"] = df_conso[\"Tab data\"].astype(str)  # Convert to string to avoid errors\n",
+    "df_conso[\"Tab data\"] = df_conso[\"Tab data\"].astype(str)\n",
     "unique_teams = df_conso[\"Tab data\"].str.split(\",\").explode().str.strip().unique()\n",
     "\n",
     "# Initialize team columns with N/A\n",
@@ -78,28 +93,24 @@
     "for _, row in df_conso.iterrows():\n",
     "    psid = row[\"PSID\"]\n",
     "    status = row[\"Status\"]\n",
-    "    teams = str(row[\"Tab data\"]).split(\",\")  # Convert to string before splitting\n",
+    "    teams = str(row[\"Tab data\"]).split(\",\")\n",
     "    for team in teams:\n",
     "        team = team.strip()\n",
     "        unique_psids.loc[unique_psids[\"PSID\"] == psid, team] = status\n",
-    "\n",
-    "# Handle records with missing or non-numeric PSIDs\n",
-    "invalid_psid_records = df_conso[df_conso[\"PSID\"].isna() | ~df_conso[\"PSID\"].astype(str).str.isnumeric()]\n",
     "\n",
     "# Save the final processed data\n",
     "with pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace', engine='openpyxl') as writer:\n",
     "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
     "    invalid_emails.to_excel(writer, sheet_name=\"Invalid Emails\", index=False)\n",
-    "    invalid_psid_records.to_excel(writer, sheet_name=\"Invalid PSIDs\", index=False)\n",
+    "    df_invalid_psid.to_excel(writer, sheet_name=\"Invalid PSIDs\", index=False)\n",
     "    multiple_emails.to_excel(writer, sheet_name=\"Multiple Emails\", index=False)\n",
-    "    df_conso.to_excel(writer, sheet_name=\"Original Data\", index=False)\n",
-    "print(\"done\")"
+    "    df_conso.to_excel(writer, sheet_name=\"Original Data\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c14e943f",
+   "id": "8b0f94b9",
    "metadata": {},
    "outputs": [],
    "source": [
