--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,122 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d86f1108",
+   "id": "6663b6eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# Load Excel file\n",
+    "file_path = \"GIRS2.xlsx\"\n",
+    "xl = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Load necessary sheets\n",
+    "df_conso = xl.parse(\"Conso Data\")\n",
+    "df_girs = xl.parse(\"GIRS\")\n",
+    "df_tier = xl.parse(\"Tier_Data\")\n",
+    "df_ttrl = xl.parse(\"TTRL_Data\")\n",
+    "df_pdmr = xl.parse(\"PDMR_Data\", header=None, names=[\"Resource Name\"])\n",
+    "\n",
+    "# Remove extra spaces & standardize case\n",
+    "def clean_dataframe(df):\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "    return df.applymap(lambda x: x.strip().lower() if isinstance(x, str) else x)\n",
+    "\n",
+    "df_conso = clean_dataframe(df_conso)\n",
+    "df_girs = clean_dataframe(df_girs)\n",
+    "df_tier = clean_dataframe(df_tier)\n",
+    "df_ttrl = clean_dataframe(df_ttrl)\n",
+    "df_pdmr = clean_dataframe(df_pdmr)\n",
+    "\n",
+    "# Standardize PSIDs by removing leading zeros\n",
+    "def standardize_psid(psid):\n",
+    "    return str(int(psid)) if str(psid).isdigit() else psid\n",
+    "\n",
+    "df_conso[\"PSID\"] = df_conso[\"PSID\"].astype(str).apply(standardize_psid)\n",
+    "df_girs[\"PSID\"] = df_girs[\"PSID\"].astype(str).apply(standardize_psid)\n",
+    "df_tier[\"PSID\"] = df_tier[\"PSID\"].astype(str).apply(standardize_psid)\n",
+    "df_ttrl[\"PSID\"] = df_ttrl[\"PSID\"].astype(str).apply(standardize_psid)\n",
+    "\n",
+    "# Extract email from < > if present\n",
+    "def extract_email(email):\n",
+    "    match = re.search(r\"<(.*?)>\", email)\n",
+    "    return match.group(1) if match else email.split()[0] if \"@\" in email else \"\"\n",
+    "\n",
+    "# Process unique PSIDs with Resource Name and Email\n",
+    "def process_psid_group(group):\n",
+    "    resource_names = [name.strip() for name in group[\"Resource Name\"].dropna().unique()]\n",
+    "    email_ids = [extract_email(email.strip()) for email in group[\"Email\"].dropna().unique()]\n",
+    "    psid = group[\"PSID\"].iloc[0]\n",
+    "    \n",
+    "    # Remove resource names containing PSID unless it's the only one\n",
+    "    valid_names = [name for name in resource_names if str(psid) not in name]\n",
+    "    resource_name = max(valid_names, key=lambda x: len(x.split()), default=resource_names[0] if resource_names else \"\")\n",
+    "    \n",
+    "    # Validate email addresses\n",
+    "    valid_emails = [email for email in email_ids if \"@\" in email and not any(sym in email for sym in [\"/\", \"#\"])]\n",
+    "    email = \"; \".join(valid_emails) if valid_emails else \"\"\n",
+    "    \n",
+    "    selected_email = valid_emails[0] if len(set(valid_emails)) == 1 else \"; \".join(valid_emails) if len(valid_emails) > 1 else \"\"\n",
+    "    \n",
+    "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email, \"All Emails\": \"; \".join(email_ids), \"Selected Email\": selected_email})\n",
+    "\n",
+    "# Filter valid PSIDs (numeric only)\n",
+    "df_valid_psid = df_conso[df_conso[\"PSID\"].str.isnumeric()].copy()\n",
+    "df_invalid_psid = df_conso[~df_conso[\"PSID\"].str.isnumeric()].copy()\n",
+    "df_invalid_psid.insert(0, \"PSID\", \"Invalid\")\n",
+    "\n",
+    "unique_psids = df_valid_psid.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
+    "\n",
+    "# Capture invalid email records\n",
+    "invalid_emails = df_valid_psid[df_valid_psid[\"PSID\"].isin(unique_psids.loc[unique_psids[\"Email\"].eq(\"\"), \"PSID\"])].copy()\n",
+    "\n",
+    "# Capture multiple email discrepancies\n",
+    "multiple_emails = unique_psids[unique_psids[\"All Emails\"].str.contains(\";\")].copy()\n",
+    "multiple_emails[\"Selected Email\"] = multiple_emails[\"Selected Email\"]\n",
+    "\n",
+    "# Merge GIRS Current Status\n",
+    "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
+    "unique_psids.rename(columns={\"Role\": \"GIRS Current Status\"}, inplace=True)\n",
+    "\n",
+    "# Merge Tier1 & TTRL status\n",
+    "unique_psids[\"Tier1\"] = unique_psids[\"PSID\"].isin(df_tier[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "unique_psids[\"TTRL\"] = unique_psids[\"PSID\"].isin(df_ttrl[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Merge PDMR status\n",
+    "unique_psids[\"PDMR\"] = unique_psids[\"Resource Name\"].isin(df_pdmr[\"Resource Name\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "\n",
+    "# Extract unique team names from Conso Data Tab data column\n",
+    "df_conso[\"Tab data\"] = df_conso[\"Tab data\"].astype(str)\n",
+    "unique_teams = df_conso[\"Tab data\"].str.split(\",\").explode().str.strip().unique()\n",
+    "\n",
+    "# Initialize team columns with N/A\n",
+    "for team in unique_teams:\n",
+    "    unique_psids[team] = \"N/A\"\n",
+    "\n",
+    "# Update team status based on Conso Data\n",
+    "for _, row in df_conso.iterrows():\n",
+    "    psid = row[\"PSID\"]\n",
+    "    status = row[\"Status\"]\n",
+    "    teams = str(row[\"Tab data\"]).split(\",\")\n",
+    "    for team in teams:\n",
+    "        team = team.strip()\n",
+    "        unique_psids.loc[unique_psids[\"PSID\"] == psid, team] = status\n",
+    "\n",
+    "# Save the final processed data\n",
+    "with pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace', engine='openpyxl') as writer:\n",
+    "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
+    "    invalid_emails.to_excel(writer, sheet_name=\"Invalid Emails\", index=False)\n",
+    "    df_invalid_psid.to_excel(writer, sheet_name=\"Invalid PSIDs\", index=False)\n",
+    "    multiple_emails.to_excel(writer, sheet_name=\"Multiple Emails\", index=False)\n",
+    "    df_conso.to_excel(writer, sheet_name=\"Original Data\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3026af4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b0f94b9",
+   "id": "b678eeef",
    "metadata": {},
    "outputs": [],
    "source": [
