--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,122 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6663b6eb",
+   "id": "d3b7c718",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# Load Excel file\n",
+    "file_path = \"GIRS2.xlsx\"\n",
+    "xl = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Load necessary sheets\n",
+    "df_conso = xl.parse(\"Conso Data\")\n",
+    "df_girs = xl.parse(\"GIRS\")\n",
+    "df_tier = xl.parse(\"Tier_Data\")\n",
+    "df_ttrl = xl.parse(\"TTRL_Data\")\n",
+    "df_pdmr = xl.parse(\"PDMR_Data\", header=None, names=[\"Resource Name\"])\n",
+    "\n",
+    "# Remove extra spaces & standardize case\n",
+    "def clean_dataframe(df):\n",
+    "    df.columns = df.columns.str.strip()\n",
+    "    return df.applymap(lambda x: x.strip().lower() if isinstance(x, str) else x)\n",
+    "\n",
+    "df_conso = clean_dataframe(df_conso)\n",
+    "df_girs = clean_dataframe(df_girs)\n",
+    "df_tier = clean_dataframe(df_tier)\n",
+    "df_ttrl = clean_dataframe(df_ttrl)\n",
+    "df_pdmr = clean_dataframe(df_pdmr)\n",
+    "\n",
+    "# Standardize PSIDs by removing leading zeros\n",
+    "def standardize_psid(psid):\n",
+    "    return str(int(psid)) if str(psid).isdigit() else psid\n",
+    "\n",
+    "df_conso[\"PSID\"] = df_conso[\"PSID\"].astype(str).apply(standardize_psid)\n",
+    "df_girs[\"PSID\"] = df_girs[\"PSID\"].astype(str).apply(standardize_psid)\n",
+    "df_tier[\"PSID\"] = df_tier[\"PSID\"].astype(str).apply(standardize_psid)\n",
+    "df_ttrl[\"PSID\"] = df_ttrl[\"PSID\"].astype(str).apply(standardize_psid)\n",
+    "\n",
+    "# Extract email from < > if present\n",
+    "def extract_email(email):\n",
+    "    match = re.search(r\"<(.*?)>\", email)\n",
+    "    return match.group(1) if match else email.split()[0] if \"@\" in email else \"\"\n",
+    "\n",
+    "# Process unique PSIDs with Resource Name and Email\n",
+    "def process_psid_group(group):\n",
+    "    resource_names = [name.strip() for name in group[\"Resource Name\"].dropna().unique()]\n",
+    "    email_ids = [extract_email(email.strip()) for email in group[\"Email\"].dropna().unique()]\n",
+    "    psid = group[\"PSID\"].iloc[0]\n",
+    "    \n",
+    "    # Remove resource names containing PSID unless it's the only one\n",
+    "    valid_names = [name for name in resource_names if str(psid) not in name]\n",
+    "    resource_name = max(valid_names, key=lambda x: len(x.split()), default=resource_names[0] if resource_names else \"\")\n",
+    "    \n",
+    "    # Validate email addresses\n",
+    "    valid_emails = [email for email in email_ids if \"@\" in email and not any(sym in email for sym in [\"/\", \"#\"])]\n",
+    "    email = \"; \".join(valid_emails) if valid_emails else \"\"\n",
+    "    \n",
+    "    selected_email = valid_emails[0] if len(set(valid_emails)) == 1 else \"; \".join(valid_emails) if len(valid_emails) > 1 else \"\"\n",
+    "    \n",
+    "    return pd.Series({\"Resource Name\": resource_name, \"Email\": email, \"All Emails\": \"; \".join(email_ids), \"Selected Email\": selected_email})\n",
+    "\n",
+    "# Filter valid and invalid PSIDs\n",
+    "df_valid_psid = df_conso[df_conso[\"PSID\"].str.isnumeric()].copy()\n",
+    "df_invalid_psid = df_conso[~df_conso[\"PSID\"].str.isnumeric()].copy()\n",
+    "\n",
+    "# Process Valid PSIDs\n",
+    "unique_psids = df_valid_psid.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
+    "\n",
+    "# Process Invalid PSIDs\n",
+    "invalid_psids_processed = df_invalid_psid.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
+    "\n",
+    "# Capture invalid email records\n",
+    "invalid_emails = df_valid_psid[df_valid_psid[\"PSID\"].isin(unique_psids.loc[unique_psids[\"Email\"].eq(\"\"), \"PSID\"])].copy()\n",
+    "\n",
+    "# Capture multiple email discrepancies\n",
+    "multiple_emails = unique_psids[unique_psids[\"All Emails\"].str.contains(\";\")].copy()\n",
+    "multiple_emails[\"Selected Email\"] = multiple_emails[\"Selected Email\"]\n",
+    "\n",
+    "# Merge GIRS Current Status\n",
+    "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
+    "unique_psids.rename(columns={\"Role\": \"GIRS Current Status\"}, inplace=True)\n",
+    "invalid_psids_processed = invalid_psids_processed.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
+    "invalid_psids_processed.rename(columns={\"Role\": \"GIRS Current Status\"}, inplace=True)\n",
+    "\n",
+    "# Move Tier1, TTRL, and PDMR records to Insider_List\n",
+    "insider_list = unique_psids[unique_psids[\"PSID\"].isin(df_tier[\"PSID\"]) | unique_psids[\"PSID\"].isin(df_ttrl[\"PSID\"]) | unique_psids[\"PSID\"].isin(df_pdmr[\"Resource Name\"])]\n",
+    "\n",
+    "# Identify records where Role is \"Non-Core\" and suggest \"Change to Inactive\"\n",
+    "change_to_inactive = unique_psids[unique_psids[\"GIRS Current Status\"] == \"non-core\"]\n",
+    "change_to_inactive[\"Comment\"] = \"Change to Inactive\"\n",
+    "\n",
+    "# Identify employees with ADD request already in Non-Core status\n",
+    "active_in_girs = unique_psids[(unique_psids[\"GIRS Current Status\"] == \"non-core\")]\n",
+    "active_in_girs[\"Comment\"] = \"PSID already is Active user in GIRS\"\n",
+    "\n",
+    "# Identify new entries that are not in Insider List, Tier1, TTRL, or PDMR\n",
+    "new_entries = unique_psids[~unique_psids[\"PSID\"].isin(insider_list[\"PSID\"])]\n",
+    "new_entries[\"Comment\"] = \"New PSID found\"\n",
+    "\n",
+    "# Save the final processed data\n",
+    "with pd.ExcelWriter(file_path, mode='a', if_sheet_exists='replace', engine='openpyxl') as writer:\n",
+    "    unique_psids.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
+    "    invalid_emails.to_excel(writer, sheet_name=\"Invalid Emails\", index=False)\n",
+    "    invalid_psids_processed.to_excel(writer, sheet_name=\"Invalid PSIDs\", index=False)\n",
+    "    multiple_emails.to_excel(writer, sheet_name=\"Multiple Emails\", index=False)\n",
+    "    insider_list.to_excel(writer, sheet_name=\"Insider_List\", index=False)  # New Sheet\n",
+    "    change_to_inactive.to_excel(writer, sheet_name=\"Change_to_Inactive\", index=False)  # New Sheet\n",
+    "    active_in_girs.to_excel(writer, sheet_name=\"Active_in_GIRS\", index=False)  # New Sheet\n",
+    "    new_entries.to_excel(writer, sheet_name=\"New_Entries\", index=False)  # New Sheet\n",
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60a46f9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3026af4c",
+   "id": "bf8a2c78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b678eeef",
+   "id": "6a732ea0",
    "metadata": {},
    "outputs": [],
    "source": [
